Updated our SQL and Python with functions file.

--- a/sql-and-python/SQL_and_Python_with_Functions.ipynb
+++ b/sql-and-python/SQL_and_Python_with_Functions.ipynb
@@ -1,17 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "\",?\"*20[:1]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -23,11 +12,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['datetime', 'register_no', 'emp_no', 'trans_no', 'upc', 'description', 'trans_type', 'trans_subtype', 'trans_status', 'department', 'quantity', 'Scale', 'cost', 'unitPrice', 'total', 'regPrice', 'altPrice', 'tax', 'taxexempt', 'foodstamp', 'wicable', 'discount', 'memDiscount', 'discountable', 'discounttype', 'voided', 'percentDiscount', 'ItemQtty', 'volDiscType', 'volume', 'VolSpecial', 'mixMatch', 'matched', 'memType', 'staff', 'numflag', 'itemstatus', 'tenderstatus', 'charflag', 'varflag', 'batchHeaderID', 'local', 'organic', 'display', 'receipt', 'card_no', 'store', 'branch', 'match_id', 'trans_id']\n",
+      "['2010-01-01T14:11:12Z', '16', '54', '119', '0000000040505', 'Oatscreme Shake $5.49', 'I', 'NA', 'NA', '14', '1', '0', '0.8', '5.49', '5.49', '5.49', '0', '1', '0', '1', '0', '0', '0', '1', '0', '0', '0.00000000', '1', '0', '0', '0', '0', '0', 'NA', '0', '5', '0', '0', '0', '0', 'NULL', '0', 'NULL', 'NA', '0', '19134', '1', '0', '0', '1']\n",
+      "['2010-01-01T14:11:28Z', '16', '54', '119', '0344', 'Credit Card', 'T', 'CC', '0', '0', '0', '0', '0', '0', '-5.92', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', 'NULL', '0', '0', '0', '0', '0', '0', 'NA', '0', '0', '0', '0', 'I', '0', 'NULL', '0', 'NULL', 'NA', '0', '19134', '1', '0', '0', '3']\n",
+      "['2010-01-01T14:11:34Z', '16', '54', '119', '0', 'Change', 'T', 'CA', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '8', 'NULL', '0', '0', '0', '0', '0', '0', 'NA', '0', '0', '0', '0', '0', '0', 'NULL', '0', 'NULL', 'NA', '0', '19134', '1', '0', '0', '4']\n",
+      "['2010-01-01T14:11:34Z', '16', '54', '119', 'TAX', 'Tax', 'A', '0', '0', '0', '0', '0', '0', '0', '0.43', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', 'NULL', '0', '0', '0', '0', '0', '0', 'NA', '0', '0', '0', '0', '0', '0', 'NULL', '0', 'NULL', 'NA', '0', '19134', '1', '0', '0', '6']\n"
+     ]
+    }
+   ],
    "source": [
     "import sqlite3\n",
     "from wedge_helper import *\n",
@@ -51,10 +50,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "db = sqlite3.connect(\"change_me.db\") #':memory:') # Make this a directory + file if you want to store the results.\n",
@@ -65,10 +62,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "with open(input_file,'r') as ifile :\n",
@@ -84,11 +79,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On 2011-04-06, card_no = 10378 spent 30.67.\n",
+      "On 2011-04-09, card_no = 10378 spent 31.27.\n",
+      "On 2011-05-03, card_no = 10378 spent 179.53.\n",
+      "On 2011-06-06, card_no = 10378 spent 10.13.\n",
+      "On 2011-08-09, card_no = 10378 spent 47.59.\n",
+      "On 2011-09-05, card_no = 10378 spent 89.47.\n",
+      "On 2011-09-06, card_no = 10378 spent 34.64.\n",
+      "On 2011-09-12, card_no = 10378 spent 39.06.\n",
+      "On 2011-09-29, card_no = 10378 spent 40.42.\n",
+      "On 2011-09-30, card_no = 10378 spent 15.95.\n",
+      "On 2011-10-03, card_no = 10378 spent 123.06.\n",
+      "On 2011-10-05, card_no = 10378 spent 24.29.\n",
+      "On 2011-10-10, card_no = 10378 spent 28.04.\n",
+      "On 2011-10-28, card_no = 10378 spent 10.18.\n",
+      "On 2011-10-29, card_no = 10378 spent 2.69.\n",
+      "On 2011-11-06, card_no = 10378 spent 8.41.\n",
+      "On 2011-11-16, card_no = 10378 spent 35.74.\n",
+      "On 2011-11-22, card_no = 10378 spent 37.83.\n",
+      "On 2011-12-01, card_no = 10378 spent 35.07.\n",
+      "On 2011-12-07, card_no = 10378 spent 115.38.\n",
+      "On 2011-12-09, card_no = 10378 spent 22.92.\n",
+      "On 2011-12-11, card_no = 10378 spent -33.63.\n"
+     ]
+    }
+   ],
    "source": [
     "result = cur.execute('''SELECT card_no,\n",
     "                               date(datetime) as date,\n",
@@ -108,15 +130,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's return to our big query from last class."
+    "Now let's return to our big query that correctly captures things like sales, transactions, and items. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "result = cur.execute('''SELECT card_no,\n",
@@ -143,24 +163,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(18736, 4, '2011', '04', -3.29, 1, -1)\n",
+      "(18736, 4, '2011', '05', -3.29, 1, -1)\n",
+      "(18736, 2, '2011', '06', -2.01, 2, -2)\n",
+      "(18736, 5, '2011', '06', -6.3, 1, -1)\n",
+      "(18736, 4, '2011', '07', -6.58, 2, -2)\n",
+      "(18736, 17, '2011', '07', -2.69, 1, -1)\n",
+      "(18736, 4, '2011', '08', -3.29, 1, -1)\n",
+      "(18736, 4, '2011', '09', -4.99, 1, -1)\n",
+      "(18736, 2, '2011', '10', -7.15, 1, -1)\n",
+      "(18736, 4, '2011', '10', -3.79, 1, -1)\n",
+      "(18736, 2, '2011', '11', -5.0, 2, -2)\n",
+      "(18736, 4, '2011', '12', -3.99, 1, -1)\n"
+     ]
+    }
+   ],
    "source": [
-    "for row in result :\n",
-    "    print(row)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "# Here's a way to print row-by-row results. Using `enumerate` is a good trick to give yourself a counter.\n",
     "for idx,row in enumerate(result) :\n",
     "    print(row)\n",
     "    if idx > 10 :\n",
@@ -176,10 +202,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "db.close()"
@@ -202,9 +226,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
