Updated Wedge Investigation

--- a/wedge-investigation/Wedge Investigation.ipynb
+++ b/wedge-investigation/Wedge Investigation.ipynb
@@ -10,14 +10,14 @@
     "\n",
     "1. Manually open one of the Wedge zipped files, extract the file on the inside, and move it into the same folder as this notebook. *Don't use the one I use so we can compare notes.*\n",
     "\n",
-    "1. Change the name of `input_file` down below. \n",
+    "1. Change the value of `input_file` down below. \n",
     "\n",
-    "We'll go through this together in class on Tuesday, so you don't have to run it all now. Just run this notebook through the point where I've written \"Stop Here\". "
+    "For now, just run this notebook through the point where I've written \"Stop Here\". "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,20 +33,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\"datetime\",\"register_no\",\"emp_no\",\"trans_no\",\"upc\",\"description\",\"trans_type\",\"trans_subtype\",\"trans_status\",\"department\",\"quantity\",\"Scale\",\"cost\",\"unitPrice\",\"total\",\"regPrice\",\"altPrice\",\"tax\",\"taxexempt\",\"foodstamp\",\"wicable\",\"discount\",\"memDiscount\",\"discountable\",\"discounttype\",\"voided\",\"percentDiscount\",\"ItemQtty\",\"volDiscType\",\"volume\",\"VolSpecial\",\"mixMatch\",\"matched\",\"memType\",\"staff\",\"numflag\",\"itemstatus\",\"tenderstatus\",\"charflag\",\"varflag\",\"batchHeaderID\",\"local\",\"organic\",\"display\",\"receipt\",\"card_no\",\"store\",\"branch\",\"match_id\",\"trans_id\"\\n\"2013-07-01 07:18:31\",\"16\",\"54\",\"1\",\"0000000009506\",\"Offsite: Plain Croissant\",\"I\",\" \",\" \",\"17\",\"10\",\"0\",\"0.2100\",\"1.3900\",\"13.9000\",\"1.3900\",\"0.0000\",\"0\",\"0\",\"1\",\"0\",\"0.0000\",\"0.0000\",\"1\",\"0\",\"0\",NULL,\"10\",\"0\",\"0\",\"0.0000\",\"0\",\"0\",,NULL,\"1\",\"0\",\"0\",,\"0\",NULL,\"0\",\"0\",\" \",\"0\",\"50056\",\"32\",\"0\",\"0\",\"4\"\\n\"2013-07-01 07:18:42\",\"16\",\"54\",\"1\",\"0000000009515\",\"Offsite: White Burger Bun\",\"I\",\" \",\" \",\"17\",\"24\",\"0\",\"0.0000\",\"0.4000\",\"9.6000\",\"0.400'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_file = open(input_file)\n",
     "my_file.read(1000)"
@@ -63,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,19 +68,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\"datetime\",\"register_no\",\"emp_no\",\"trans_no\",\"upc\",\"description\",\"trans_type\",\"trans_subtype\",\"trans_status\",\"department\",\"quantity\",\"Scale\",\"cost\",\"unitPrice\",\"total\",\"regPrice\",\"altPrice\",\"tax\",\"taxexempt\",\"foodstamp\",\"wicable\",\"discount\",\"memDiscount\",\"discountable\",\"discounttype\",\"voided\",\"percentDiscount\",\"ItemQtty\",\"volDiscType\",\"volume\",\"VolSpecial\",\"mixMatch\",\"matched\",\"memType\",\"staff\",\"numflag\",\"itemstatus\",\"tenderstatus\",\"charflag\",\"varflag\",\"batchHeaderID\",\"local\",\"organic\",\"display\",\"receipt\",\"card_no\",\"store\",\"branch\",\"match_id\",\"trans_id\"\n",
-      "\"2013-07-01 07:18:31\",\"16\",\"54\",\"1\",\"0000000009506\",\"Offsite: Plain Croissant\",\"I\",\" \",\" \",\"17\",\"10\",\"0\",\"0.2100\",\"1.3900\",\"13.9000\",\"1.3900\",\"0.0000\",\"0\",\"0\",\"1\",\"0\",\"0.0000\",\"0.0000\",\"1\",\"0\",\"0\",NULL,\"10\",\"0\",\"0\",\"0.0000\",\"0\",\"0\",,NULL,\"1\",\"0\",\"0\",,\"0\",NULL,\"0\",\"0\",\" \",\"0\",\"50056\",\"32\",\"0\",\"0\",\"4\"\n",
-      "\"2013-07-01 07:18:42\",\"16\",\"54\",\"1\",\"0000000009515\",\"Offsite: White Burger Bun\",\"I\",\" \",\" \",\"17\",\"24\",\"0\",\"0.0000\",\"0.4000\",\"9.6000\",\"0.400\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(input_file) as my_file :\n",
     "    print(my_file.read(1000))"
@@ -106,56 +85,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a\n",
-      "\n",
-      " \n",
-      "\n",
-      "s\n",
-      "\n",
-      "t\n",
-      "\n",
-      "r\n",
-      "\n",
-      "i\n",
-      "\n",
-      "n\n",
-      "\n",
-      "g\n",
-      "\n",
-      " \n",
-      "\n",
-      "o\n",
-      "\n",
-      "f\n",
-      "\n",
-      " \n",
-      "\n",
-      "l\n",
-      "\n",
-      "e\n",
-      "\n",
-      "t\n",
-      "\n",
-      "t\n",
-      "\n",
-      "e\n",
-      "\n",
-      "r\n",
-      "\n",
-      "s\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for letter in \"a string of letters\" :\n",
+    "for letter in \"some letters\" :\n",
     "    print(letter + \"\\n\")"
    ]
   },
@@ -168,17 +102,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a\t \ts\tt\tr\ti\tn\tg\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"\\t\".join(\"a string\"))"
    ]
@@ -201,18 +127,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\"datetime\",\"register_no\",\"emp_no\",\"trans_no\",\"upc\",\"description\",\"trans_type\",\"trans_subtype\",\"trans_status\",\"department\",\"quantity\",\"Scale\",\"cost\",\"unitPrice\",\"total\",\"regPrice\",\"altPrice\",\"tax\",\"taxexempt\",\"foodstamp\",\"wicable\",\"discount\",\"memDiscount\",\"discountable\",\"discounttype\",\"voided\",\"percentDiscount\",\"ItemQtty\",\"volDiscType\",\"volume\",\"VolSpecial\",\"mixMatch\",\"matched\",\"memType\",\"staff\",\"numflag\",\"itemstatus\",\"tenderstatus\",\"charflag\",\"varflag\",\"batchHeaderID\",\"local\",\"organic\",\"display\",\"receipt\",\"card_no\",\"store\",\"branch\",\"match_id\",\"trans_id\"\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(input_file) as my_file :\n",
     "    for line in my_file :\n",
@@ -239,26 +156,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\"datetime\",\"register_no\",\"emp_no\",\"trans_no\",\"upc\",\"description\",\"trans_type\",\"trans_subtype\",\"trans_status\",\"department\",\"quantity\",\"Scale\",\"cost\",\"unitPrice\",\"total\",\"regPrice\",\"altPrice\",\"tax\",\"taxexempt\",\"foodstamp\",\"wicable\",\"discount\",\"memDiscount\",\"discountable\",\"discounttype\",\"voided\",\"percentDiscount\",\"ItemQtty\",\"volDiscType\",\"volume\",\"VolSpecial\",\"mixMatch\",\"matched\",\"memType\",\"staff\",\"numflag\",\"itemstatus\",\"tenderstatus\",\"charflag\",\"varflag\",\"batchHeaderID\",\"local\",\"organic\",\"display\",\"receipt\",\"card_no\",\"store\",\"branch\",\"match_id\",\"trans_id\"\n",
-      "\n",
-      "\"2013-07-01 07:18:31\",\"16\",\"54\",\"1\",\"0000000009506\",\"Offsite: Plain Croissant\",\"I\",\" \",\" \",\"17\",\"10\",\"0\",\"0.2100\",\"1.3900\",\"13.9000\",\"1.3900\",\"0.0000\",\"0\",\"0\",\"1\",\"0\",\"0.0000\",\"0.0000\",\"1\",\"0\",\"0\",NULL,\"10\",\"0\",\"0\",\"0.0000\",\"0\",\"0\",,NULL,\"1\",\"0\",\"0\",,\"0\",NULL,\"0\",\"0\",\" \",\"0\",\"50056\",\"32\",\"0\",\"0\",\"4\"\n",
-      "\n",
-      "\"2013-07-01 07:18:42\",\"16\",\"54\",\"1\",\"0000000009515\",\"Offsite: White Burger Bun\",\"I\",\" \",\" \",\"17\",\"24\",\"0\",\"0.0000\",\"0.4000\",\"9.6000\",\"0.4000\",\"0.0000\",\"0\",\"0\",\"1\",\"0\",\"0.0000\",\"0.0000\",\"1\",\"0\",\"0\",NULL,\"24\",\"0\",\"0\",\"0.0000\",\"0\",\"0\",,NULL,\"1\",\"0\",\"0\",,\"0\",NULL,\"0\",\"0\",\" \",\"0\",\"50056\",\"32\",\"0\",\"0\",\"5\"\n",
-      "\n",
-      "\"2013-07-01 07:18:46\",\"16\",\"54\",\"1\",\"0000000009516\",\"Offsite: Wheat Burger Bun\",\"I\",\" \",\" \",\"17\",\"12\",\"0\",\"0.0000\",\"0.4000\",\"4.8000\",\"0.4000\",\"0.0000\",\"0\",\"0\",\"1\",\"0\",\"0.0000\",\"0.0000\",\"1\",\"0\",\"0\",NULL,\"12\",\"0\",\"0\",\"0.0000\",\"0\",\"0\",,NULL,\"1\",\"0\",\"0\",,\"0\",NULL,\"0\",\"0\",\" \",\"0\",\"50056\",\"32\",\"0\",\"0\",\"6\"\n",
-      "\n",
-      "\"2013-07-01 07:18:58\",\"16\",\"54\",\"1\",\"0000000009511\",\"Offsite: Stirato Roll\",\"I\",\" \",\" \",\"17\",\"15\",\"0\",\"0.0000\",\"0.6000\",\"9.0000\",\"0.6000\",\"0.0000\",\"0\",\"0\",\"1\",\"0\",\"0.0000\",\"0.0000\",\"1\",\"0\",\"0\",NULL,\"15\",\"0\",\"0\",\"0.0000\",\"0\",\"0\",,NULL,\"1\",\"0\",\"0\",,\"0\",NULL,\"0\",\"0\",\" \",\"0\",\"50056\",\"32\",\"0\",\"0\",\"7\"\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "counter = 0\n",
     "\n",
@@ -280,31 +180,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "\"datetime\",\"register_no\",\"emp_no\",\"trans_no\",\"upc\",\"description\",\"trans_type\",\"trans_subtype\",\"trans_status\",\"department\",\"quantity\",\"Scale\",\"cost\",\"unitPrice\",\"total\",\"regPrice\",\"altPrice\",\"tax\",\"taxexempt\",\"foodstamp\",\"wicable\",\"discount\",\"memDiscount\",\"discountable\",\"discounttype\",\"voided\",\"percentDiscount\",\"ItemQtty\",\"volDiscType\",\"volume\",\"VolSpecial\",\"mixMatch\",\"matched\",\"memType\",\"staff\",\"numflag\",\"itemstatus\",\"tenderstatus\",\"charflag\",\"varflag\",\"batchHeaderID\",\"local\",\"organic\",\"display\",\"receipt\",\"card_no\",\"store\",\"branch\",\"match_id\",\"trans_id\"\n",
-      "\n",
-      "1\n",
-      "\"2013-07-01 07:18:31\",\"16\",\"54\",\"1\",\"0000000009506\",\"Offsite: Plain Croissant\",\"I\",\" \",\" \",\"17\",\"10\",\"0\",\"0.2100\",\"1.3900\",\"13.9000\",\"1.3900\",\"0.0000\",\"0\",\"0\",\"1\",\"0\",\"0.0000\",\"0.0000\",\"1\",\"0\",\"0\",NULL,\"10\",\"0\",\"0\",\"0.0000\",\"0\",\"0\",,NULL,\"1\",\"0\",\"0\",,\"0\",NULL,\"0\",\"0\",\" \",\"0\",\"50056\",\"32\",\"0\",\"0\",\"4\"\n",
-      "\n",
-      "2\n",
-      "\"2013-07-01 07:18:42\",\"16\",\"54\",\"1\",\"0000000009515\",\"Offsite: White Burger Bun\",\"I\",\" \",\" \",\"17\",\"24\",\"0\",\"0.0000\",\"0.4000\",\"9.6000\",\"0.4000\",\"0.0000\",\"0\",\"0\",\"1\",\"0\",\"0.0000\",\"0.0000\",\"1\",\"0\",\"0\",NULL,\"24\",\"0\",\"0\",\"0.0000\",\"0\",\"0\",,NULL,\"1\",\"0\",\"0\",,\"0\",NULL,\"0\",\"0\",\" \",\"0\",\"50056\",\"32\",\"0\",\"0\",\"5\"\n",
-      "\n",
-      "3\n",
-      "\"2013-07-01 07:18:46\",\"16\",\"54\",\"1\",\"0000000009516\",\"Offsite: Wheat Burger Bun\",\"I\",\" \",\" \",\"17\",\"12\",\"0\",\"0.0000\",\"0.4000\",\"4.8000\",\"0.4000\",\"0.0000\",\"0\",\"0\",\"1\",\"0\",\"0.0000\",\"0.0000\",\"1\",\"0\",\"0\",NULL,\"12\",\"0\",\"0\",\"0.0000\",\"0\",\"0\",,NULL,\"1\",\"0\",\"0\",,\"0\",NULL,\"0\",\"0\",\" \",\"0\",\"50056\",\"32\",\"0\",\"0\",\"6\"\n",
-      "\n",
-      "4\n",
-      "\"2013-07-01 07:18:58\",\"16\",\"54\",\"1\",\"0000000009511\",\"Offsite: Stirato Roll\",\"I\",\" \",\" \",\"17\",\"15\",\"0\",\"0.0000\",\"0.6000\",\"9.0000\",\"0.6000\",\"0.0000\",\"0\",\"0\",\"1\",\"0\",\"0.0000\",\"0.0000\",\"1\",\"0\",\"0\",NULL,\"15\",\"0\",\"0\",\"0.0000\",\"0\",\"0\",,NULL,\"1\",\"0\",\"0\",,\"0\",NULL,\"0\",\"0\",\" \",\"0\",\"50056\",\"32\",\"0\",\"0\",\"7\"\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(input_file) as my_file :\n",
     "    for idx,line in enumerate(my_file) :\n",
@@ -339,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,98 +233,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "x = [1,2,3,4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, 4]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['\"2013-07-01 07:18:58\"',\n",
-       " '\"16\"',\n",
-       " '\"54\"',\n",
-       " '\"1\"',\n",
-       " '\"0000000009511\"',\n",
-       " '\"Offsite: Stirato Roll\"',\n",
-       " '\"I\"',\n",
-       " '\" \"',\n",
-       " '\" \"',\n",
-       " '\"17\"',\n",
-       " '\"15\"',\n",
-       " '\"0\"',\n",
-       " '\"0.0000\"',\n",
-       " '\"0.6000\"',\n",
-       " '\"9.0000\"',\n",
-       " '\"0.6000\"',\n",
-       " '\"0.0000\"',\n",
-       " '\"0\"',\n",
-       " '\"0\"',\n",
-       " '\"1\"',\n",
-       " '\"0\"',\n",
-       " '\"0.0000\"',\n",
-       " '\"0.0000\"',\n",
-       " '\"1\"',\n",
-       " '\"0\"',\n",
-       " '\"0\"',\n",
-       " 'NULL',\n",
-       " '\"15\"',\n",
-       " '\"0\"',\n",
-       " '\"0\"',\n",
-       " '\"0.0000\"',\n",
-       " '\"0\"',\n",
-       " '\"0\"',\n",
-       " '',\n",
-       " 'NULL',\n",
-       " '\"1\"',\n",
-       " '\"0\"',\n",
-       " '\"0\"',\n",
-       " '',\n",
-       " '\"0\"',\n",
-       " 'NULL',\n",
-       " '\"0\"',\n",
-       " '\"0\"',\n",
-       " '\" \"',\n",
-       " '\"0\"',\n",
-       " '\"50056\"',\n",
-       " '\"32\"',\n",
-       " '\"0\"',\n",
-       " '\"0\"',\n",
-       " '\"7\"\\n']"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "line.split(\",\") "
    ]
@@ -464,48 +253,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processed 1 lines.\n",
-      "Processed 100001 lines.\n",
-      "Processed 200001 lines.\n",
-      "Processed 300001 lines.\n",
-      "Processed 400001 lines.\n",
-      "Processed 500001 lines.\n",
-      "Processed 600001 lines.\n",
-      "Processed 700001 lines.\n",
-      "Processed 800001 lines.\n",
-      "Processed 900001 lines.\n",
-      "Processed 1000001 lines.\n",
-      "Processed 1100001 lines.\n",
-      "Processed 1200001 lines.\n",
-      "Processed 1300001 lines.\n",
-      "Processed 1400001 lines.\n",
-      "Processed 1500001 lines.\n",
-      "Processed 1600001 lines.\n",
-      "Processed 1700001 lines.\n",
-      "Processed 1800001 lines.\n",
-      "Processed 1900001 lines.\n",
-      "Processed 2000001 lines.\n",
-      "Processed 2100001 lines.\n",
-      "Processed 2200001 lines.\n",
-      "Processed 2300001 lines.\n",
-      "Processed 2400001 lines.\n",
-      "Processed 2500001 lines.\n",
-      "Processed 2600001 lines.\n",
-      "Processed 2700001 lines.\n",
-      "Processed 2800001 lines.\n",
-      "Processed 2900001 lines.\n",
-      "Processed 2997135 lines.\n",
-      "Done processing.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "vals = set() # \"vals\" is a bad name for a variable, but I'm being tricky\n",
     "\n",
@@ -523,17 +273,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "11369\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(len(vals))"
    ]
@@ -543,15 +285,6 @@
    "metadata": {},
    "source": [
     "What's this doing?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"187\""
    ]
   }
  ],
