--- a/sql-and-python/SQL_and_Python.ipynb
+++ b/sql-and-python/SQL_and_Python.ipynb
@@ -13,9 +13,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['datetime', 'register_no', 'emp_no', 'trans_no', 'upc', 'description', 'trans_type', 'trans_subtype', 'trans_status', 'department', 'quantity', 'Scale', 'cost', 'unitPrice', 'total', 'regPrice', 'altPrice', 'tax', 'taxexempt', 'foodstamp', 'wicable', 'discount', 'memDiscount', 'discountable', 'discounttype', 'voided', 'percentDiscount', 'ItemQtty', 'volDiscType', 'volume', 'VolSpecial', 'mixMatch', 'matched', 'memType', 'staff', 'numflag', 'itemstatus', 'tenderstatus', 'charflag', 'varflag', 'batchHeaderID', 'local', 'organic', 'display', 'receipt', 'card_no', 'store', 'branch', 'match_id', 'trans_id']\n",
+      "['2010-01-01T14:11:12Z', '16', '54', '119', '0000000040505', 'Oatscreme Shake $5.49', 'I', 'NA', 'NA', '14', '1', '0', '0.8', '5.49', '5.49', '5.49', '0', '1', '0', '1', '0', '0', '0', '1', '0', '0', '0.00000000', '1', '0', '0', '0', '0', '0', 'NA', '0', '5', '0', '0', '0', '0', 'NULL', '0', 'NULL', 'NA', '0', '19134', '1', '0', '0', '1']\n",
+      "['2010-01-01T14:11:28Z', '16', '54', '119', '0344', 'Credit Card', 'T', 'CC', '0', '0', '0', '0', '0', '0', '-5.92', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', 'NULL', '0', '0', '0', '0', '0', '0', 'NA', '0', '0', '0', '0', 'I', '0', 'NULL', '0', 'NULL', 'NA', '0', '19134', '1', '0', '0', '3']\n",
+      "['2010-01-01T14:11:34Z', '16', '54', '119', '0', 'Change', 'T', 'CA', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '8', 'NULL', '0', '0', '0', '0', '0', '0', 'NA', '0', '0', '0', '0', '0', '0', 'NULL', '0', 'NULL', 'NA', '0', '19134', '1', '0', '0', '4']\n",
+      "['2010-01-01T14:11:34Z', '16', '54', '119', 'TAX', 'Tax', 'A', '0', '0', '0', '0', '0', '0', '0', '0.43', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', 'NULL', '0', '0', '0', '0', '0', '0', 'NA', '0', '0', '0', '0', '0', '0', 'NULL', '0', 'NULL', 'NA', '0', '19134', '1', '0', '0', '6']\n"
+     ]
+    }
+   ],
    "source": [
     "import sqlite3\n",
     "\n",
@@ -40,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,9 +84,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x2a894c31260>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cur.execute('''DROP TABLE IF EXISTS test_table''')\n",
     "cur.execute('''CREATE TABLE test_table (\n",
@@ -99,9 +122,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x2a894c31260>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cur.execute('''INSERT INTO test_table (first_name, last_name, age, height) \n",
     "               VALUES ('John','Chandler',45,6.42)''')"
@@ -118,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,9 +216,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x2a894c31260>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cur.execute('''DROP TABLE IF EXISTS transactions''')\n",
     "cur.execute('''CREATE TABLE transactions (\n",
@@ -251,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,9 +381,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(12965, '2010-01-02', 24.580000000000002), (14756, '2010-01-02', 82.36), (15552, '2010-01-01', 12.94), (16746, '2010-01-02', 36.050000000000004), (16945, '2010-01-03', 22.320000000000004), (19134, '2010-01-01', 17.96), (22119, '2010-01-02', 73.93999999999998)]\n"
+     ]
+    }
+   ],
    "source": [
     "result = cur.execute('''SELECT card_no,\n",
     "                               date(datetime) as date,\n",
@@ -359,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,9 +517,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On 10378, card_no = 2011-04-06 spent 30.67.\n",
+      "On 10378, card_no = 2011-04-09 spent 31.27.\n",
+      "On 10378, card_no = 2011-05-03 spent 179.53.\n",
+      "On 10378, card_no = 2011-06-06 spent 10.13.\n",
+      "On 10378, card_no = 2011-08-09 spent 47.59.\n",
+      "On 10378, card_no = 2011-09-05 spent 89.47.\n",
+      "On 10378, card_no = 2011-09-06 spent 34.64.\n",
+      "On 10378, card_no = 2011-09-12 spent 39.06.\n",
+      "On 10378, card_no = 2011-09-29 spent 40.42.\n",
+      "On 10378, card_no = 2011-09-30 spent 15.95.\n",
+      "On 10378, card_no = 2011-10-03 spent 123.06.\n",
+      "On 10378, card_no = 2011-10-05 spent 24.29.\n",
+      "On 10378, card_no = 2011-10-10 spent 28.04.\n",
+      "On 10378, card_no = 2011-10-28 spent 10.18.\n",
+      "On 10378, card_no = 2011-10-29 spent 2.69.\n",
+      "On 10378, card_no = 2011-11-06 spent 8.41.\n",
+      "On 10378, card_no = 2011-11-16 spent 35.74.\n",
+      "On 10378, card_no = 2011-11-22 spent 37.83.\n",
+      "On 10378, card_no = 2011-12-01 spent 35.07.\n",
+      "On 10378, card_no = 2011-12-07 spent 115.38.\n",
+      "On 10378, card_no = 2011-12-09 spent 22.92.\n",
+      "On 10378, card_no = 2011-12-11 spent -33.63.\n"
+     ]
+    }
+   ],
    "source": [
     "for idx,row in enumerate(result) :\n",
     "    print(\"On {0}, card_no = {1} spent {2:,.2f}.\".format(row[0],row[1],row[2]))\n",
@@ -491,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,9 +600,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10378, 1, '2011', '12', -7.59, 1, -1)\n",
+      "(10378, 1, '2012', '01', -2.99, 1, -1)\n",
+      "(10378, 1, '2012', '02', -4.99, 1, -1)\n",
+      "(10378, 1, '2012', '03', -14.99, 1, -1)\n",
+      "(10378, 1, '2012', '04', -1.79, 1, -1)\n",
+      "(10378, 1, '2014', '05', -0.9, 1, -1)\n",
+      "(10378, 2, '2015', '09', -0.99, 1, -1)\n",
+      "(10378, 4, '2012', '06', -4.28, 1, -2)\n",
+      "(10378, 4, '2015', '10', -4.29, 1, -1)\n",
+      "(10378, 6, '2011', '12', -7.79, 1, -1)\n",
+      "(10378, 6, '2012', '03', -5.49, 1, -1)\n",
+      "(10378, 7, '2012', '05', 0.5, 1, -1)\n"
+     ]
+    }
+   ],
    "source": [
     "for idx,row in enumerate(result) :\n",
     "    print(row)\n",
@@ -537,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,9 +655,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10378, 1, '2011', '12', -7.59, 1, -1)\n",
+      "(10378, 1, '2012', '01', -2.99, 1, -1)\n",
+      "(10378, 1, '2012', '02', -4.99, 1, -1)\n",
+      "(10378, 1, '2012', '03', -14.99, 1, -1)\n",
+      "(10378, 1, '2012', '04', -1.79, 1, -1)\n",
+      "(10378, 1, '2014', '05', -0.9, 1, -1)\n",
+      "(10378, 2, '2015', '09', -0.99, 1, -1)\n",
+      "(10378, 4, '2012', '06', -4.28, 1, -2)\n",
+      "(10378, 4, '2015', '10', -4.29, 1, -1)\n",
+      "(10378, 6, '2011', '12', -7.79, 1, -1)\n",
+      "(10378, 6, '2012', '03', -5.49, 1, -1)\n",
+      "(10378, 7, '2012', '05', 0.5, 1, -1)\n"
+     ]
+    }
+   ],
    "source": [
     "#%%timeit # uncomment to test the execution time of the cell\n",
     "db = sqlite3.connect(':memory:') # this is the only change!\n",
