some small changes to File Testing code.

--- a/python-file-exploration/File Testing - Solutions.ipynb
+++ b/python-file-exploration/File Testing - Solutions.ipynb
@@ -4,18 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook we'll work through some of the issues we identified in class that we'll need to solve for the Wedge project. Here's a reminder.\n",
-    "\n",
+    "In this notebook we'll work through some of the issues we identified in class that we'll need to solve to do the Wedge project. \n",
+    "<!--\n",
+    "Here's a reminder.\n",
     "![list-from-board](list_of_tasks.jpg)\n",
-    "\n",
     "Working from this list, we see the key tasks as follows:\n",
+    "--> \n",
+    "\n",
+    "Here's a list of tasks we need to accomplish: \n",
     "\n",
     "1. We need to get our file or files out of the zip file.\n",
-    "1. We need to be able to read in the file. \n",
+    "1. We need to be able to read the file into Python in the file. \n",
     "1. We need to do a few tests: looking for a header row, checking for delimiters, checking for quotes.\n",
-    "1. We need to identify the owner number, which has index `45` in the row.\n",
-    "1. We need to find the destination row.\n",
-    "1. We need to write out the row. \n",
+    "1. We need to write out the data in a \"clean\" format. \n",
     "\n",
     "I've built some toy examples for us to play with in class. First, let's get a list of the files. The `os` package has a handy function `listdir` that will help. "
    ]
@@ -23,9 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os"
@@ -34,9 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "os.listdir(\"data/\")"
@@ -52,9 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "zip_files = os.listdir(\"data/\")"
@@ -82,9 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from zipfile import ZipFile # usually you'd do all these imports at the beginning"
@@ -93,9 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Let's extract one file from the first zip in our list\n",
@@ -115,15 +106,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Look in the folder `third-class/` and you'll see that the file was extracted into this directory. (Q: Why this one?) Now, we don't want to do this in practice, so we'll try to just read the files in the zip file. Let's delete the file that we just extracted just to be clean. The `os` package has a helpful function (`remove`) for us. But we need to get the name of the file first."
+    "Look in the folder `python-file-exploration/` and you'll see that the file was extracted into this directory. (Q: Why this one?) Now, we don't want to do this in practice, so we'll try to just read the files in the zip file. Let's delete the file that we just extracted just to be clean. The `os` package has a helpful function (`remove`) for us. But we need to get the name of the file first."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "with ZipFile(\"data/\" + zip_files[0], 'r') as zf :\n",
@@ -142,9 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Now let's delete that spurious file we created\n",
@@ -157,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now go check the `third-class` directory and you'll see it's gone.\n",
+    "Now go check the `python-file-exploration` directory and you'll see it's gone.\n",
     "\n",
     "In this next cell, write a loop over all the files in `zip_files` printing the contents to the screen."
    ]
@@ -165,9 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for zipf in zip_files :\n",
@@ -193,9 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "this_zf = zip_files[0]\n",
@@ -225,9 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import io\n",
@@ -267,9 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for this_zf in zip_files :\n",
@@ -332,9 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
@@ -370,9 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for this_zf in zip_files :\n",
@@ -406,9 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for this_zf in zip_files :\n",
@@ -438,9 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for this_zf in zip_files :\n",
@@ -460,15 +431,6 @@
     "\n",
     "            input_file.close() # tidy up"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##  Mix of Quotes and Not\n",
-    "\n",
-    "TK"
-   ]
   }
  ],
  "metadata": {
@@ -487,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
