--- a/python-file-exploration/File Testing.ipynb
+++ b/python-file-exploration/File Testing.ipynb
@@ -4,28 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook we'll work through some of the issues we identified in class that we'll need to solve for the Wedge project. Here's a reminder.\n",
-    "\n",
+    "In this notebook we'll work through some of the issues we identified in class that we'll need to solve to do the Wedge project. \n",
+    "<!--\n",
+    "Here's a reminder.\n",
     "![list-from-board](list_of_tasks.jpg)\n",
-    "\n",
     "Working from this list, we see the key tasks as follows:\n",
+    "--> \n",
+    "\n",
+    "Here's a list of tasks we need to accomplish: \n",
     "\n",
     "1. We need to get our file or files out of the zip file.\n",
-    "1. We need to be able to read in the file. \n",
+    "1. We need to be able to read the file into Python in the file. \n",
     "1. We need to do a few tests: looking for a header row, checking for delimiters, checking for quotes.\n",
-    "1. We need to identify the owner number, which has index `45` in the row.\n",
-    "1. We need to find the destination row.\n",
-    "1. We need to write out the row. \n",
+    "1. We need to write out the data in a \"clean\" format. \n",
     "\n",
     "I've built some toy examples for us to play with in class. First, let's get a list of the files. The `os` package has a handy function `listdir` that will help. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os"
@@ -33,27 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['file1.zip',\n",
-       " 'file2.zip',\n",
-       " 'file3.zip',\n",
-       " 'file4.zip',\n",
-       " 'file5.zip',\n",
-       " 'file_6_7.zip']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "os.listdir(\"data/\")"
    ]
@@ -67,10 +48,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "zip_files = os.listdir(\"data/\")"
@@ -97,10 +76,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from zipfile import ZipFile # usually you'd do all these imports at the beginning"
@@ -108,22 +85,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File Name                                             Modified             Size\n",
-      "file1.csv                                      2018-09-17 18:18:58         4177\n",
-      "Extracting all the files now...\n",
-      "Done!\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Let's extract one file from the first zip in our list\n",
     "\n",
@@ -142,24 +106,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Look in the folder `third-class/` and you'll see that the file was extracted into this directory. (Q: Why this one?) Now, we don't want to do this in practice, so we'll try to just read the files in the zip file. Let's delete the file that we just extracted just to be clean. The `os` package has a helpful function (`remove`) for us. But we need to get the name of the file first."
+    "Look in the folder `python-file-exploration/` and you'll see that the file was extracted into this directory. (Q: Why this one?) Now, we don't want to do this in practice, so we'll try to just read the files in the zip file. Let's delete the file that we just extracted just to be clean. The `os` package has a helpful function (`remove`) for us. But we need to get the name of the file first."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['file1.csv']\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "with ZipFile(\"data/\" + zip_files[0], 'r') as zf :\n",
     "    print(zf.namelist())"
@@ -176,10 +130,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Now let's delete that spurious file we created\n",
@@ -192,31 +144,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now go check the `third-class` directory and you'll see it's gone.\n",
+    "Now go check the `python-file-exploration` directory and you'll see it's gone.\n",
     "\n",
     "In this next cell, write a loop over all the files in `zip_files` printing the contents to the screen."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['file1.csv']\n",
-      "['file2.csv']\n",
-      "['file3.csv']\n",
-      "['file4.csv']\n",
-      "['file5.csv']\n",
-      "['file6.csv', 'file7.csv']\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for zipf in zip_files :\n",
     "    with ZipFile(\"data/\" + zipf,'r') as zf :  \n",
@@ -240,25 +177,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "b'\"Sepal.Length\"\\t\"Sepal.Width\"\\t\"Petal.Length\"\\t\"Petal.Width\"\\t\"Species\"\\r\\n'\n",
-      "b'5.1\\t3.5\\t1.4\\t0.2\\t\"setosa\"\\r\\n'\n",
-      "b'4.9\\t3\\t1.4\\t0.2\\t\"setosa\"\\r\\n'\n",
-      "b'4.7\\t3.2\\t1.3\\t0.2\\t\"setosa\"\\r\\n'\n",
-      "b'4.6\\t3.1\\t1.5\\t0.2\\t\"setosa\"\\r\\n'\n",
-      "b'5\\t3.6\\t1.4\\t0.2\\t\"setosa\"\\r\\n'\n",
-      "b'5.4\\t3.9\\t1.7\\t0.4\\t\"setosa\"\\r\\n'\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "this_zf = zip_files[0]\n",
     "\n",
@@ -290,9 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import io\n",
@@ -318,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q: What do you notice about this output? \n",
+    "Q: What do you notice about this output? What's the delimiter? How are quotes used? What's the first line?\n",
     "\n",
     "A: ??\n",
     "\n",
@@ -332,9 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# your code here\n",
@@ -378,9 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
@@ -431,9 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for this_zf in zip_files :\n",
@@ -463,21 +376,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# your code here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##  Mix of Quotes and Not\n",
-    "\n",
-    "There are some simple ways we can probably deal with quotes for the Wedge. If we get here, we'll discuss. "
    ]
   }
  ],
@@ -497,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
