Some new data for us to play with, plus the schema for a wedge table in GBQ.

--- a/python-gbq/Python GBQ Example.ipynb
+++ b/python-gbq/Python GBQ Example.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "# These first two values will be different on your machine. \n",
     "service_path = \"C:\\\\users\\\\jchan\\\\dropbox\\\\teaching\\\\\"\n",
-    "service_file = 'UMT-MSBA-7b4265df0ca4.json'\n",
+    "service_file = 'UMT-MSBA-7b4265df0ca4.json' # this is your authentication information  \n",
     "\n",
     "# And these stay the same. \n",
     "private_key =service_path + service_file\n",
